force-app/main/default/objects/Surgeon360_RatingInfluence__c/Surgeon360_RatingInfluence__c.object-meta.xml
<CustomObject>
    <description>Allows customization of Zimmer rating that appears in Surgeon 360 SF1 app.</description>
    <label>Surgeon360 Rating Influence</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Surgeon 360 Rating Influence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surgeon360 Rating Influences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>