force-app/main/default/objects/Surgeon360_RatingInfluence__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>Defines operation to perform. If Range is selected, range low/high fields should be populated. Note that the Range function will use the following format:
(LHS &gt; Range Low &amp;&amp; LHS &lt;= Range High)</description>
    <inlineHelpText>Defines operation to perform. If Range is selected, range low/high fields should be populated. Note that the Range function will use the following format:
(LHS &gt; Range Low &amp;&amp; LHS &lt;= Range High)</inlineHelpText>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>=</fullName>
                <default>true</default>
                <label>=</label>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>Range</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>