force-app/main/default/objects/Surgeon360_RatingInfluence__c/fields/Range_High__c.field-meta.xml
<CustomField>
    <fullName>Range_High__c</fullName>
    <description>A high end of a range</description>
    <inlineHelpText>A high end of a range, i.e. LHS will be &lt;= this value</inlineHelpText>
    <label>Range High</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>