force-app/main/default/objects/Surgeon360_RatingInfluence__c/fields/Range_Low__c.field-meta.xml
<CustomField>
    <fullName>Range_Low__c</fullName>
    <description>A low end of a range</description>
    <inlineHelpText>A low end of a range,  i.e. LHS will be &gt; this value</inlineHelpText>
    <label>Range Low</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>