force-app/main/default/objects/Surgeon360_RatingInfluence__c/fields/Related_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Name__c</fullName>
    <label>Related Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>% Zimmer Usage</fullName>
            </value>
            <value>
                <fullName>Campaigns</fullName>
            </value>
            <value>
                <fullName>Healthcare Facility Relationships</fullName>
            </value>
            <value>
                <fullName>Opportunities</fullName>
            </value>
            <value>
                <fullName>Payors</fullName>
            </value>
            <value>
                <fullName>Peer Networks</fullName>
            </value>
            <value>
                <fullName>Product Usage - Market</fullName>
            </value>
            <value>
                <fullName>Product Usage - ZB</fullName>
            </value>
            <value>
                <fullName>Public Engagements</fullName>
            </value>
            <value>
                <fullName>Schedules</fullName>
            </value>
            <value>
                <fullName>Sunshine Payments</fullName>
            </value>
            <value>
                <fullName>Tasks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>