force-app/main/default/objects/Surgeon360_RatingInfluence__c/fields/Return_Value__c.field-meta.xml
<CustomField>
    <fullName>Return_Value__c</fullName>
    <description>Value to return if the input to this record&apos;s operator evaluates to true.</description>
    <inlineHelpText>Value to return if the input to this record&apos;s operator evaluates to true.</inlineHelpText>
    <label>Return Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>