force-app/main/default/objects/Surgeon360_RatingInfluence__c/fields/RHS_Value__c.field-meta.xml
<CustomField>
    <fullName>RHS_Value__c</fullName>
    <description>Right hand side of comparison equation. 

Eg:
if (LHS &lt; RHS) return Return Value</description>
    <inlineHelpText>Right hand side of comparison equation. 

Eg:
if (LHS &lt; RHS) return Return Value</inlineHelpText>
    <label>Single Operator RHS Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>