force-app/main/default/objects/Surgeon360_RatingInfluence__c/validationRules/Range_Fields_Required_If_Operation_is_Ra.validationRule-meta.xml
<ValidationRule>
    <fullName>Range_Fields_Required_If_Operation_is_Ra</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Operator__c, &quot;Range&quot;),
 OR(  ISBLANK(Range_High__c),ISBLANK(Range_Low__c))
)</errorConditionFormula>
    <errorMessage>Range fields must be populated if operation is Range</errorMessage>
</ValidationRule>