force-app/main/default/objects/Surgeon360_RatingInfluence__c/validationRules/Required_RHS_value_if_operation_not_rang.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_RHS_value_if_operation_not_rang</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(Operator__c , &quot;Range&quot;)),
ISBLANK( RHS_Value__c)
)</errorConditionFormula>
    <errorMessage>Value needed for RHS field when operation is not a Range</errorMessage>
</ValidationRule>