force-app/main/default/objects/Surgeon360_RatingInfluence__c/listViews/Influence_view.listView-meta.xml
<ListView>
    <fullName>Influence_view</fullName>
    <columns>NAME</columns>
    <columns>Related_Object_Name__c</columns>
    <columns>Operator__c</columns>
    <columns>RHS_Value__c</columns>
    <columns>Range_Low__c</columns>
    <columns>Range_High__c</columns>
    <columns>Return_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>Influence view</label>
    <language>en_US</language>
</ListView>